@@ -108,3 +108,6 @@ Current
 	- Protocols: Added raw_motd and raw_admin
 	- Modules: Added chanserv/op, chanserv/voice, chanserv/protect, chanserv/halfop, and chanserv/owner
 	- API: added flag +L for viewing channel access list
+	- API: added in_group
+	- Modules: Added to nickserv/set: set accountname and no status
+
